fix [#36247] Modifier Ocean (Geometry in Displace)- Subdivision Surface regression in 2.68